DEV-008: Keyboard shortcuts interception implementation
"src" folder changes
* Separated the parameter and result entities from the LoggerService class to different files
* Divided ILoggerService into the log building functionality in ILogBuilder and the log saving functionality in LogBuilderExtensions
* Implemented ILoggerService functionality in LoggerService
* Implemented ILogBuilder functionality in LogBuilder
* Added class diagrams to each project
* Added entity ShortcutEntity
* Added model ShortcutModel
* Added repository interface IShortcutRepo
* Added repository ShortcutRepo
* Replaced ILoggerService with ILogBuilder in page files
* Added handler KeyUpHandler
* Added store KeyUpStore
* Added manager interface IKeyUpManager
* Added manager KeyUpManager

--- a/src/FilesSafeReserve.UI/Components/Layout/MainLayout.razor
+++ b/src/FilesSafeReserve.UI/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using FilesSafeReserve.UI.Components.Layout
+
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
