--- a/src/FilesSafeReserve.UI/Components/Pages/HomePage/HomePage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/HomePage/HomePage.razor
@@ -1,3 +1,17 @@
 ﻿@page "/"
 
+@using FilesSafeReserve.UI.Data.Managers.IManagers
+
+@inject IKeyUpManager KeyUpManager
+
 <p>Home Page</p>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await KeyUpManager.Listener.EnsureStartedAsync();
+        }
+    }
+}
