--- a/src/FilesSafeReserve.UI/Components/Layout/NavMenu.razor
+++ b/src/FilesSafeReserve.UI/Components/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">FilesSafeReserve.UI</a>
+        <a class="navbar-brand" href="">Files Safe Reserve</a>
     </div>
 </div>
 
