--- a/src/FilesSafeReserve.UI/Components/Pages/CreateSafePage/CreateSafePage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/CreateSafePage/CreateSafePage.razor
@@ -28,11 +28,11 @@
 </Modal>
 
 <div class="main-container">
-    <h3>Create Safe Page</h3>
+    <h3 class="gradient-background">Create Safe Page</h3>
     <EditForm EditContext="ViewModel.EditContext" OnValidSubmit="OnCreateClick" style="width: 100%">
         <DataAnnotationsValidator />
 
-        <div class="create-container">
+        <div class="create-container gradient-background">
             <div class="form-floating mb-3 input-container">
                 <InputText @bind-Value="ViewModel.VirtualSafe.Name" type="text" class="form-control" id="floatingInput" placeholder="Safe Name" />
                 <label for="floatingInput">Safe name</label>
