--- a/src/FilesSafeReserve.UI/Components/Pages/EditSafePage/EditSafePage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/EditSafePage/EditSafePage.razor
@@ -1,12 +1,15 @@
 ﻿@page "/virtual-safe/edit/{id}"
 
 @using CommunityToolkit.Maui.Storage
+@using FilesSafeReserve.App.Builders.IBuilders
 @using FilesSafeReserve.App.Models
 @using FilesSafeReserve.App.Services.IServices
 @using FilesSafeReserve.Infra.Repositories.IRepositories
+@using FilesSafeReserve.Infra.Extensions;
 
 @inject IVirtualSafeRepo VirtualSafeRepo
-@inject ILoggerService LoggerService
+@inject ILogBuilder LogBuilder
+@inject ILogRepo LogRepo
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
 
@@ -29,11 +32,11 @@
 </Modal>
 
 <div class="main-container">
-    <h3>Edit Safe Page</h3>
+    <h3 class="gradient-background">Edit Safe Page</h3>
     <EditForm EditContext="ViewModel.EditContext" OnValidSubmit="OnEditClick" style="width: 100%">
         <DataAnnotationsValidator />
 
-        <div class="edit-container">
+        <div class="edit-container gradient-background">
             <div class="form-floating mb-3 input-container">
                 <InputText @bind-Value="ViewModel.VirtualSafe.Name" type="text" class="form-control" id="floatingInput" placeholder="Safe Name" />
                 <label for="floatingInput">Safe name</label>
@@ -111,8 +114,8 @@
             result.Value.Description = ViewModel.VirtualSafe.Description;
             result.Value.Details.UpdatedTimestamp = DateTime.Now;
 
-            await LoggerService
-                        .Log(async () => await VirtualSafeRepo.UpdateAsync(result.Value))
+            await LogBuilder
+                        .WithDelegate(async () => await VirtualSafeRepo.UpdateAsync(result.Value))
                         .WithParameters(
                             new()
                             {
@@ -120,7 +123,8 @@
                                 Type = LogOperationModel.Types.UpdateVirtualSafe,
                                 ItemPath = result.Value.Path
                             })
-                        .ExecuteAsync();
+                        .BuildAsync()
+                        .LogResultAsync(LogRepo);
 
             await ViewModel.SuccessModal.ShowAsync();
         }
