--- a/src/FilesSafeReserve.UI/Components/Pages/SafesListPage/SafesListPage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/SafesListPage/SafesListPage.razor
@@ -6,14 +6,14 @@
 @inject NavigationManager Navigation
 
 <div class="main-container">
-    <h3>Safes List Page</h3>
-    <div class="list-container">
+    <h3 class="gradient-background">Safes List Page</h3>
+    <div class="list-container gradient-background">
         @if (ViewModel.VirtualSafes.Count is not 0)
         {
             @foreach (var safe in ViewModel.VirtualSafes)
             {
                 <div class="item-container">
-                    <div class="name-part">@safe.Name</div>
+                    <div class="name-part gradient-background">@safe.Name</div>
                     <p>@safe.Description</p>
                     <p>Last Reservation: @safe.Details.ReservedTimestamp.ToString("dd/MM/yyyy HH:mm:ss")</p>
                     <div style="text-align: center;">
