--- a/src/FilesSafeReserve.UI/wwwroot/css/app.css
+++ b/src/FilesSafeReserve.UI/wwwroot/css/app.css
@@ -1,4 +1,62 @@
-﻿html, body {
+﻿.loader-container {
+    margin: 10px;
+    width: 100%;
+}
+
+.loader {
+    width: 100%;
+    height: 10px;
+    display: inline-block;
+    position: relative;
+    background: #8FB7E9;
+    overflow: hidden;
+}
+
+    .loader::after {
+        content: '';
+        width: 192px;
+        height: 10px;
+        background: #060270;
+        position: absolute;
+        top: 0;
+        left: 0;
+        box-sizing: border-box;
+        animation: animloader 2s linear infinite;
+    }
+
+@keyframes animloader {
+    0% {
+        left: 0;
+        transform: translateX(-100%);
+    }
+
+    100% {
+        left: 100%;
+        transform: translateX(0%);
+    }
+}
+
+.gradient-background {
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+}
+
+@keyframes GradientAnim {
+    0% {
+        background-position: 0% 49%
+    }
+
+    50% {
+        background-position: 100% 52%
+    }
+
+    100% {
+        background-position: 0% 49%
+    }
+}
+
+html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
