--- a/src/FilesSafeReserve.UI/Components/Layout/MainLayout.razor
+++ b/src/FilesSafeReserve.UI/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a class="repo-ref" href="https://github.com/ShyDanLanIhor/Files-Safe-Reserve" target="_blank">GitHub Repository</a>
         </div>
 
         <article class="content px-4">
