--- a/src/FilesSafeReserve.UI/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
@@ -63,6 +63,55 @@
     color: black;
 }
 
+.description-text-container {
+    width: 100%;
+    border: 1px solid royalblue;
+    border-radius: 11px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.description-text-key {
+    background-color: royalblue;
+    color: white;
+    padding: 5px 10px 5px 10px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: max-content;
+}
+
+.description-text-value {
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.description-path-container {
+    width: 100%;
+    border: 1px solid royalblue;
+    border-radius: 11px;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.description-path-key {
+    background-color: royalblue;
+    color: white;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.description-path-value {
+    margin-left: 10px;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
 .timestamp-container {
     display: flex;
     flex-direction: column;
@@ -71,31 +120,52 @@
 }
 
 .timestamp-item {
-    padding-top: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 10px;
-    background: white;
-    margin-bottom: 20px;
     width: 100%;
+    border: 1px solid royalblue;
+    border-radius: 11px;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+.timestamp-item-key {
+    background-color: royalblue;
+    color: white;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.timestamp-item-value {
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow-x: auto;
+    white-space: nowrap;
+    background-color: white;
 }
 
 .btns-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     padding-top: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
     border-radius: 10px;
     background: white;
-    margin-bottom: 20px
+    margin-bottom: 20px;
+    max-width: 500px;
 }
 
-.btns-item {
-    margin: 10px;
+.btns-container-grid {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(auto-fit, 120px);
+    grid-column-gap: 30px;
+    grid-row-gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 .alert-container {
@@ -125,154 +195,19 @@
     align-items: center;
 }
 
-.reserve-time-elements-container {
-    width: 100%;
+.reserve-time-input-container {
+    width: 80%;
+    max-width: 270px;
 }
 
 .reserve-time-btns-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-}
-
-.directory-container {
-    background: white;
-    width: 100%;
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(auto-fit, 120px);
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.directory-header-container {
-    margin: 10px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.directory-elements-container {
-    width: 100%;
-}
-
-.directory-element-container {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.directory-element-data {
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-}
-
-.directory-element-icon {
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.directory-element-name {
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.directory-element-btns {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-}
-
-.directory-element-delete {
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.reservation-container {
-    background: white;
-    width: 100%;
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.reservation-header-container {
-    margin: 10px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.reservation-elements-container {
-    width: 100%;
-}
-
-.reservation-element-container {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.reservation-element-data {
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-}
-
-.reservation-element-icon {
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.reservation-element-name {
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.reservation-element-btns {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-}
-
-.reservation-element-reserve {
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.reservation-element-delete {
-    margin-right: 5px;
-    margin-left: 5px;
+    grid-column-gap: 30px;
+    grid-row-gap: 10px;
 }
 
 @media (max-width: 855px) {
